# EKFSLAM-from-scratch

./: .gitignore  README.md  Tasks.md  citations.txt  comments.txt  turtle.repos
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nusim/share/nusim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nusim/share/nusim/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_nusim__rosidl_generator_cExport-debug.cmake  export_nusim__rosidl_generator_cExport.cmake  export_nusim__rosidl_generator_cppExport.cmake  export_nusim__rosidl_generator_pyExport-debug.cmake  export_nusim__rosidl_generator_pyExport.cmake  export_nusim__rosidl_typesupport_fastrtps_cExport-debug.cmake  export_nusim__rosidl_typesupport_fastrtps_cExport.cmake  export_nusim__rosidl_typesupport_fastrtps_cppExport-debug.cmake  export_nusim__rosidl_typesupport_fastrtps_cppExport.cmake  nusimConfig.cmake  nusim__rosidl_typesupport_cExport-debug.cmake  nusim__rosidl_typesupport_cExport.cmake  nusim__rosidl_typesupport_cppExport-debug.cmake  nusim__rosidl_typesupport_cppExport.cmake  nusim__rosidl_typesupport_introspection_cExport-debug.cmake  nusim__rosidl_typesupport_introspection_cExport.cmake  nusim__rosidl_typesupport_introspection_cppExport-debug.cmake  nusim__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/nusim/share/nusim/config/: nuturtle_control_world.yaml
install/nusim/share/nusim/srv/: Teleport.idl  Teleport.json
install/nuturtle_control/share/nuturtle_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nuturtle_control/share/nuturtle_control/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_nuturtle_control__rosidl_generator_cExport-debug.cmake  export_nuturtle_control__rosidl_generator_cExport.cmake  export_nuturtle_control__rosidl_generator_cppExport.cmake  export_nuturtle_control__rosidl_generator_pyExport-debug.cmake  export_nuturtle_control__rosidl_generator_pyExport.cmake  export_nuturtle_control__rosidl_typesupport_fastrtps_cExport-debug.cmake  export_nuturtle_control__rosidl_typesupport_fastrtps_cExport.cmake  export_nuturtle_control__rosidl_typesupport_fastrtps_cppExport-debug.cmake  export_nuturtle_control__rosidl_typesupport_fastrtps_cppExport.cmake  nuturtle_controlConfig.cmake  nuturtle_control__rosidl_typesupport_cExport-debug.cmake  nuturtle_control__rosidl_typesupport_cExport.cmake  nuturtle_control__rosidl_typesupport_cppExport-debug.cmake  nuturtle_control__rosidl_typesupport_cppExport.cmake  nuturtle_control__rosidl_typesupport_introspection_cExport-debug.cmake  nuturtle_control__rosidl_typesupport_introspection_cExport.cmake  nuturtle_control__rosidl_typesupport_introspection_cppExport-debug.cmake  nuturtle_control__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/nuturtle_control/share/nuturtle_control/config/: turtle_control.rviz
install/nuturtle_control/share/nuturtle_control/launch/: start_robot.launch.xml
install/nuturtle_control/share/nuturtle_control/msg/: RobotConfiguration.idl  RobotConfiguration.json  RobotConfiguration.msg
install/nuturtle_control/share/nuturtle_control/srv/: Control.idl  Control.json  Control_Request.msg  InitialPose.idl  InitialPose.json  InitialPose.srv  (+1 more)
install/nuturtle_description/share/nuturtle_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlelib/include/turtlelib/: diff_drive.hpp  geometry2d.hpp  svg.hpp
install/turtlelib/share/turtlelib/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
nusim/: CMakeLists.txt  README.md  package.xml
nusim/config/: basic_world.yaml  nusim.rviz
nusim/launch/: nusim.launch.xml
nusim/log/: latest_test
nusim/src/: nusim.cpp
nuslam/: CMakeLists.txt  package.xml
nuslam/launch/: landmark_detect.launch.xml  pc_bringup.launch.xml  slam.launch.xml  turtlebot_bringup.launch.xml  unknown_data_assoc.launch.xml
nuslam/msg/: Circle.msg  Landmarks.msg
nuslam/src/: landmarks.cpp  slam.cpp
nuturtle_control/: CMakeLists.txt  package.xml
nuturtle_control/config/: real_robot_with_odometry.rviz  slam.rviz  turtle_control.rviz  v2.rviz  v3.rviz
nuturtle_control/launch/: start_robot.launch.xml
nuturtle_control/src/: circle.cpp  odometry.cpp  turtle_control.cpp  turtle_control_test.cpp
nuturtle_control/srv/: Control.srv
nuturtle_control/tests/: turtle_circle_test.cpp  turtle_circle_test.launch.xml  turtle_control_test.cpp  turtle_control_test.launch.xml  turtle_odom_test.cpp  turtle_odom_test.launch.xml  turtle_odom_test_node.cpp
nuturtle_description/: CMakeLists.txt  README.md  package.xml
nuturtle_description/config/: basic_all.rviz  basic_green.rviz  basic_red.rviz  diff_params.yaml  turtlebot3_burger.urdf.xacro
nuturtle_description/config/urdf/: turtlebot3_burger.urdf  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_pi.urdf
nuturtle_description/launch/: load_all.launch.xml  load_one.launch.py
nuturtle_description/urdf/: turtlebot3_burger.urdf.xacro
turtlelib/: CMakeLists.txt  README.md
turtlelib/exercises/: B6_frame_input.txt  B6_frame_output.txt
turtlelib/include/turtlelib/: diff_drive.hpp  geometry2d.hpp  se2d.hpp  svg.hpp
turtlelib/src/: diff_drive.cpp  frame_main.cpp  geometry2d.cpp  main.cpp  se2d.cpp  svg.cpp
turtlelib/tests/: test_diff_drive.cpp  test_geometry2.cpp  test_geometry2d.cpp  test_se2d.cpp  test_svg.cpp
(+87 files in other folders)
